--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: "0.7.0"
+  firebase_auth: "^0.20.1"
   google_fonts: ^1.1.2
+  provider: ^4.3.3
 
 
   # The following adds the Cupertino Icons font to your application.
