--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   firebase_core: "0.7.0"
   firebase_auth: "^0.20.1"
+  cloud_firestore: ^0.16.0+1
   google_fonts: ^1.1.2
   provider: ^4.3.3
 
