--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,8 +26,10 @@ dependencies:
   firebase_core: "0.7.0"
   firebase_auth: "^0.20.1"
   cloud_firestore: ^0.16.0+1
-  google_fonts: ^1.1.2
+  firebase_storage: ^7.0.0
   provider: ^4.3.3
+  image_picker: ^0.6.7+21
+  google_fonts: ^1.1.2
 
 
   # The following adds the Cupertino Icons font to your application.
